--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:layout_margin = "20dp"
         android:src="@drawable/ic_baseline_add_24"
         app:tint="@color/black"
-        tools:ignore="SpeakableTextPresentCheck" />
+        tools:ignore="SpeakableTextPresentCheck"
+        android:backgroundTint="@color/purple_200"/>
 
 </RelativeLayout>
