--- a/app/src/main/res/layout/note_rv_item.xml
+++ b/app/src/main/res/layout/note_rv_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="#2196F3"
+   app:cardBackgroundColor= "@color/white"
     app:cardCornerRadius="15dp"
     android:padding="10dp"
     app:cardElevation="3dp">
@@ -13,7 +13,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#2196F3"
         android:layout_margin="4dp">
 
         <!--text view for displaying our note text-->
@@ -29,7 +28,9 @@
             android:padding="4dp"
             android:text="Note"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold"
+            />
 
         <!--text view for displaying our last updated text-->
         <TextView
@@ -41,7 +42,7 @@
             android:layout_toLeftOf="@id/idIVDelete"
             android:padding="4dp"
             android:text="Updated At"
-            android:textColor="@color/black"
+            android:textColor="#605656"
             android:textSize="13sp" />
 
         <!--imageview for displaying delete icon-->
