--- a/app/src/main/res/layout/todo_rv_item.xml
+++ b/app/src/main/res/layout/todo_rv_item.xml
@@ -13,7 +13,7 @@
         android:textSize="21sp"
         android:text="default"
         android:checked="false"
-        android:textColor="#3d484d"
+        android:textColor="@color/black"
         android:paddingLeft="14dp"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
